--- a/public/html/home.html
+++ b/public/html/home.html
@@ -12,7 +12,7 @@
 
 	<div class="container" ng-controller="homeCtrl">
 		  <div class="header">
-			<ul class="nav nav-pills pull-right">
+			<ul class="nav nav-pills pull-right fixed">
 			  <li class="{{menuBarButton[0]}}" ng-click="menuButtonClick(0)"><a href="/home">Home</a></li>
 			  <li class="{{menuBarButton[1]}}" ng-click="menuButtonClick(1)"><a href="/about">About</a></li>
 			  <!-- Switching between Login and Account -->
