Cleaning up unwanted

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -98,7 +98,7 @@
 				  <a href="http://nodejs.org/" target="_blank"><img height="40" src="images/node_logo.png"></a> &nbsp;&nbsp;<a href="" target="_blank" style="text-decoration : none">Express</a>&nbsp;&nbsp;
 				  <a href="https://angularjs.org/" target="_blank"><img height="20" src="images/angular_logo.png"></a> &nbsp;&nbsp;
 				  <a href="http://www.mongodb.com/" target="_blank"><img height="20" src="images/mongo_logo.png"></a>   &nbsp;&nbsp;
-				  <a href="http://www.mongodb.com/" target="_blank" class="bs-docs-booticon"><img height="20" src="images/bootstrap_logo.png"></a>
+				  <a href="http://getbootstrap.com/" target="_blank" class="bs-docs-booticon"><img height="20" src="images/bootstrap_logo.png"></a>
 			  </div>
 				</div>
 			</div>
